<resources>
    <string name="app_name">Minesweeper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_title">Minesweeper</string>
    <string name="play">PLAY</string>
    <string name="about">About</string>
    <string name="about1">In the gameboard you are supposed to uncover all the idle tiles there are which don\'t mines under them</string>
    <string name="about2">Number on the gameboard tells us how many mines that tile have in it\'s surrounding, the number can go from 0 to 8, where 0 (blank) tells us there are no tiles in it\'s surrounding and number 8 tells us all the tiles surrounding that block have mines under them</string>
    <string name="about3">Here is an example</string>
    <string name="about4">How to Play</string>
    <string name="about5">Tap on a tile, you most likely will get one with no mine under it and then build your way up to uncover all the tiles with no mine under them</string>
    <string name="about6">You can hold on to a tile for some time and it will get marked, that means it won\'t get uncovered if you tap on it by mistake. This feature can help you keep track of known mines</string>
    <string name="about7">When does the game end?</string>
    <string name="about8">* Once you have uncovered all the tiles which don\'t have any mine under them, In that case you win the game</string>
    <string name="about9">* Once you uncover a mine, In that case you loose the game</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="about_game">About Game</string>
    <string name="left">left</string>
    <string name="easy">EASY</string>
    <string name="right">right</string>
    <string name="initial_time">00:00</string>
    <string name="initial_easy_mines">10</string>
    <string name="initial_medium_mines">40</string>
    <string name="back">back</string>
    <string name="setting">mines</string>
</resources>